--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,28 @@
-version: "3.9"
+version: "3.8"
 
 services:
-  web:
-    build: ./E1
-    command: python manage.py runserver 0.0.0.0:8000
+  arangodb:
+    image: arangodb:latest
+    container_name: arangodb
+    ports:
+      - "8529:8529"
+    environment:
+      - ARANGO_ROOT_PASSWORD=${ARANGO_PASSWORD}
     volumes:
-      - ./E1:/app
+      - arango_data:/var/lib/arangodb3
+
+  postgres:
+    image: postgres:17
+    container_name: postgres_db
     ports:
-      - "8000:8000"
-    depends_on:
-      - db
-      - mongo
-      - db_source
-      - api         # 👈 on ajoute notre API Flask
+      - "5432:5432"
     environment:
-      - DB_NAME=edulink
-      - DB_USER=edulink_user
-      - DB_PASSWORD=edulink_pass
-      - DB_HOST=db
-      - DB_PORT=5432
-      - MONGO_HOST=mongo
-      - MONGO_PORT=27017
-      - SOURCE_DB_NAME=sourcedb
-      - SOURCE_DB_USER=source_user
-      - SOURCE_DB_PASSWORD=source_pass
-      - SOURCE_DB_HOST=db_source
-      - SOURCE_DB_PORT=5432
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_DB: edulink
-      POSTGRES_USER: edulink_user
-      POSTGRES_PASSWORD: edulink_pass
-    ports:
-      - "5433:5432"
-
-  db_source:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_DB: sourcedb
-      POSTGRES_USER: source_user
-      POSTGRES_PASSWORD: source_pass
-    ports:
-      - "5434:5432"
-
-  mongo:
-    image: mongo:6
-    restart: always
-    ports:
-      - "27017:27017"
-
-  api:  # 👇 ton API Flask externe
-    build:
-      context: ./api_flask
-    ports:
-      - "5001:5001"
-    restart: always
+volumes:
+  arango_data:
+  postgres_data:
