--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         ports:
           - 8529:8529
         options: >-
-          --health-cmd="curl --fail --silent http://localhost:8529/_admin/server/availability || exit 1"
+          --health-cmd="curl --fail --silent http://127.0.0.1:8529/_admin/server/availability || exit 1"
           --health-interval=10s
           --health-timeout=10s
           --health-retries=15
