--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -34,29 +34,42 @@ jobs:
         # Enlever les options de vérification de santé
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Wait for services to be ready
-        run: sleep 60 # Attendre un certain temps pour que les services soient prêts
+    - name: Wait for services to be ready
+      run: sleep 60 # Attendre un certain temps pour que les services soient prêts
 
-      - name: Test ArangoDB availability
-        run: |
-          # Vérifier manuellement la disponibilité d'ArangoDB
-          until curl --output /dev/null --silent --head --fail "http://localhost:8529/_admin/server/availability"; do
-            printf 'Waiting for ArangoDB to be ready...\n'
+    - name: Test ArangoDB availability
+      run: |
+        max_attempts=10
+        attempt=0
+        while [ $attempt -lt $max_attempts ]; do
+            attempt=$((attempt + 1))
+            echo "Attempt $attempt: Waiting for ArangoDB to be ready..."
+            response=$(curl --write-out '%{http_code}' --silent --output /dev/null http://localhost:8529/_admin/server/availability)
+            if [ "$response" -eq 200 ]; then
+            echo "ArangoDB is ready!"
+            break
+            else
+            echo "ArangoDB not ready yet. Response: $response"
+            if [ $attempt -eq $max_attempts ]; then
+                echo "Failed to start ArangoDB within the expected time."
+                exit 1
+            fi
             sleep 10
-          done
+            fi
+        done
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Run tests
-        run: pytest tests/
+    - name: Run tests
+      run: pytest tests/
