--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 
 services:
+
   arangodb:
     image: arangodb:latest
     container_name: arangodb
@@ -8,6 +9,8 @@ services:
       - "8529:8529"
     environment:
       - ARANGO_ROOT_PASSWORD=${ARANGO_PASSWORD}
+    networks:
+    - backend_net
     volumes:
       - arango_data:/var/lib/arangodb3
 
@@ -20,6 +23,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    networks:
+    - backend_net
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -31,6 +36,8 @@ services:
       - "5000:5000"
     env_file:
       - .env
+    networks:
+    - backend_net
     depends_on:
       - arangodb
       - postgres
@@ -38,3 +45,8 @@ services:
 volumes:
   arango_data:
   postgres_data:
+
+networks:
+  backend_net:
+    name: backend_net  
+    driver: bridge
